fix tests on github actions build